--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: py2
+name: o2
 channels:
 - conda-forge
 - defaults
@@ -31,3 +31,4 @@ dependencies:
 - numba
 - pip:
   - seawater
+  - workflow (/glade/u/home/mclong/p/workflow)==0.1
